Fix 1 — Media Injection language Fix 2 — TMDB Sync