@@ -1,5 +1,6 @@
 package com.db.dbworld.app.media.enrichment;
 
+import com.db.dbworld.app.stream.tag.MediaTagResolver;
 import com.db.dbworld.core.processor.ProcessExecutor;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -8,27 +9,33 @@ import lombok.extern.log4j.Log4j2;
 import org.springframework.stereotype.Service;
 
 import java.nio.file.Path;
-import java.util.HashSet;
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
  * Resolves the effective {@link TrackFilter} for a media file by probing
  * its actual track languages via MediaInfo before FFmpeg runs.
  *
- * Priority language order: Hindi (hin) → English (eng) → Gujarati (guj).
+ * Priority language order: Hindi → English → Gujarati.
  * - If any priority language exists in the file: filter audio/subtitles to
- *   those priority languages only, with Hindi as default audio.
+ *   those priority languages only, with the first matched priority language
+ *   as the default audio.
  * - If NO priority language exists: return {@code null} (keep all tracks).
  * - If the caller already provided a non-empty filter, use it as-is.
+ *
+ * Language codes are kept exactly as MediaInfo reports them (2-char or 3-char)
+ * so FFmpeg stream-mapping specifiers match the actual container metadata.
  */
 @Log4j2
 @Service
 @RequiredArgsConstructor
 public class SmartTrackFilterService {
 
-    private static final List<String> PRIORITY_LANGS = List.of("hin", "eng", "guj");
+    /** Priority languages as canonical full names, in preference order. */
+    private static final List<String> PRIORITY_LANG_NAMES = List.of("Hindi", "English", "Gujarati");
 
     private final ProcessExecutor processExecutor;
     private final ObjectMapper    objectMapper;
@@ -39,20 +46,16 @@ public class SmartTrackFilterService {
      * @return effective TrackFilter to use, or {@code null} if no filtering is needed
      */
     public TrackFilter resolve(Path mediaFile, TrackFilter userFilter) {
-        // Honour an explicit user-provided filter
         if (userFilter != null && userFilter.hasAnyFilter()) {
             return userFilter;
         }
 
         TrackLanguages langs = probeLanguages(mediaFile);
 
-        List<String> keepAudio = PRIORITY_LANGS.stream()
-                .filter(langs.audio()::contains)
-                .collect(Collectors.toList());
-
-        List<String> keepSubs = PRIORITY_LANGS.stream()
-                .filter(langs.subtitles()::contains)
-                .collect(Collectors.toList());
+        // Build lists using the ORIGINAL codes from the file (not normalized) so
+        // FFmpeg -map language specifiers match the container metadata exactly.
+        List<String> keepAudio = buildCodeList(langs.audio());
+        List<String> keepSubs  = buildCodeList(langs.subtitles());
 
         if (keepAudio.isEmpty() && keepSubs.isEmpty()) {
             log.debug("No priority languages found in {} — track filter skipped", mediaFile.getFileName());
@@ -64,28 +67,47 @@ public class SmartTrackFilterService {
         return TrackFilter.builder()
                 .keepAudioLanguages(keepAudio.isEmpty() ? null : keepAudio)
                 .keepSubtitleLanguages(keepSubs.isEmpty() ? null : keepSubs)
-                .defaultAudioLanguage(keepAudio.contains("hin") ? "hin"
-                        : keepAudio.isEmpty() ? null : keepAudio.get(0))
+                .defaultAudioLanguage(keepAudio.isEmpty() ? null : keepAudio.getFirst())
                 .noDefaultSubtitle(true)
                 .build();
     }
 
     // ──────────────────────────────────────────────────────────────────────
 
+    /**
+     * Returns a list of original language codes for priority languages found in the map,
+     * in priority order.
+     */
+    private List<String> buildCodeList(Map<String, String> resolvedToOriginal) {
+        return PRIORITY_LANG_NAMES.stream()
+                .filter(resolvedToOriginal::containsKey)
+                .map(resolvedToOriginal::get)
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Probes the file via MediaInfo and collects track language codes.
+     *
+     * Returns a map of resolved-full-name → original-code-from-file for each
+     * track type. First occurrence of each resolved language wins (so if a file
+     * has both "hi" and "hin" both resolving to "Hindi", the first one is used).
+     */
     private TrackLanguages probeLanguages(Path file) {
-        Set<String> audioLangs = new HashSet<>();
-        Set<String> subLangs   = new HashSet<>();
+        // LinkedHashMap preserves insertion order (first occurrence wins)
+        Map<String, String> audioLangs = new LinkedHashMap<>();
+        Map<String, String> subLangs   = new LinkedHashMap<>();
         try {
             String json = processExecutor.runMediaInfoCommand(file);
             JsonNode root   = objectMapper.readTree(json);
             JsonNode tracks = root.path("media").path("track");
             for (JsonNode track : tracks) {
                 String type = track.path("@type").asText("");
-                String lang = track.path("Language").asText("").toLowerCase().trim();
+                String lang = track.path("Language").asText("").trim();
                 if (lang.isBlank()) continue;
-                lang = normaliseIso(lang);
-                if ("Audio".equals(type)) audioLangs.add(lang);
-                else if ("Text".equals(type)) subLangs.add(lang);
+                String resolved = MediaTagResolver.resolveLanguage(lang.toLowerCase());
+                if ("Unknown".equalsIgnoreCase(resolved)) continue;
+                if ("Audio".equals(type))     audioLangs.putIfAbsent(resolved, lang);
+                else if ("Text".equals(type)) subLangs.putIfAbsent(resolved, lang);
             }
         } catch (Exception e) {
             log.warn("Failed to probe track languages for {}: {}", file.getFileName(), e.getMessage());
@@ -93,25 +115,5 @@ public class SmartTrackFilterService {
         return new TrackLanguages(audioLangs, subLangs);
     }
 
-    /**
-     * Normalises ISO 639-1 (2-letter) codes to ISO 639-2/B (3-letter).
-     * MediaInfo sometimes returns the shorter form.
-     */
-    private String normaliseIso(String code) {
-        return switch (code) {
-            case "hi"  -> "hin";
-            case "en"  -> "eng";
-            case "gu"  -> "guj";
-            case "ta"  -> "tam";
-            case "te"  -> "tel";
-            case "ja"  -> "jpn";
-            case "ko"  -> "kor";
-            case "zh"  -> "chi";
-            case "fr"  -> "fra";
-            case "es"  -> "spa";
-            default    -> code;
-        };
-    }
-
-    private record TrackLanguages(Set<String> audio, Set<String> subtitles) {}
+    private record TrackLanguages(Map<String, String> audio, Map<String, String> subtitles) {}
 }
